# saidao-audio

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml  requirements.txt
data/: speakers.json
data/enroll/: README.md
docs/: deploy-docker.md
src/saidao_audio/: __main__.py  api.py  cli.py  embedder.py  extract.py  logging_config.py  service.py  speaker_db.py  stream.py  vad.py
src/saidao_audio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_extract.py  test_service.py  test_speaker_db.py  test_stream.py  test_vad.py
